# study-rust

./: 404.html  Cargo.toml  hello.html  output.txt
src/: lib.back.rs  lib.rs  main.rs
tests/: test_integration.rs
tests/common/: mod.rs
