[package]
name = "study_rust"
version = "0.1.0"
edition = "2021"
default-run = "11-10"
description = "A Rust tutorial"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"

[profiles.dev]
opt-level = 0

[profiles.release]
painc = "abort"
opt-level = 3